--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,14 @@
     font-family: "Crimson Text", serif;
     font-weight: 400;
     font-style: normal;
+  
   }
   :root{
     --primary-color: #FFFFFF;
     --shade-colour: #00878e;
+    --choc-colour: #7B3F00;
+    --grey-colour: #c0c0c0;
+    --black: #000000;
     --transition-one: all 0.5s ease-in-out;
     --transition-two: all 0.7s ease-in-out;
   }
@@ -167,12 +171,16 @@
   top: -17px;
   
 }
+
 .features{
   display: flex;
-  margin-bottom: 30px;
+  margin-bottom: 90px;
+  width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .feature{
- margin-top: 30px;
+ margin-top: 50px;
  padding: 0px 30px;
  margin-left: auto;
  margin-right: auto;
@@ -192,7 +200,7 @@
 }
 h4{
 color: var(--shade-colour);
-margin: 15px 0px;
+margin: 25px 0px 0px 0px;
 text-transform: uppercase;
 }
 .feature p{
@@ -202,9 +210,62 @@ margin: 15px 0px;
 .feature a{
   cursor: pointer;
   text-transform: capitalize;
-  color: chocolate;
+  color: var(--choc-colour);
 }
 .feature a:hover{
   transition: var(--transition-one);
   opacity: 0.5;
+}
+.hand-section{
+  display: flex;
+  gap: 0px;
+  padding: 0px 120px;
+  background-color: #E7E7E7;
+  position: relative;
+  height: 350px;
+ 
+}
+.horz{
+  margin: 10px 0px 0px 0px;
+  width: 40px;
+}
+.handy{
+  width: 400px;
+  margin-top: 100px;
+  margin-left: 190px;
+  
+}
+.hand-section-phone{
+  width: 750px;
+  height: 450px;
+  padding-right: 100px;
+
+}
+.hand-section .hand-section-phone{
+ position: absolute;
+ top: -100px;
+ left: 600px;
+}
+.hand-button{
+  padding: 5px;
+  width: 150px;
+  height: 35px;
+  margin: 20px 0px;
+  color: var(--primary-color);
+  background: linear-gradient( to right, var(--black) 10%, var(--primary-color));
+  font-weight: 600;
+  border-radius: 15px;
+  cursor: pointer;
+}
+.hand-button:hover{
+padding: 5px;
+width: 150px;
+height: 35px;
+margin: 20px 0px;
+background: var(--shade-colour);
+color: var(--primary-color);
+font-weight: 600;
+border-radius: 15px;
+cursor: pointer;
+transition: var(--transition-two);
 }
