--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@
 }
 
  
-  .navbar, a{
+  .navbar a{
     margin-right: 40px;
     text-decoration: none;
     color: inherit;
@@ -209,6 +209,7 @@ margin: 15px 0px;
 }
 .feature a{
   cursor: pointer;
+  font-weight: 700;
   text-transform: capitalize;
   color: var(--choc-colour);
 }
@@ -268,39 +269,121 @@ cursor: pointer;
 transition: var(--transition-two);
 }
 .brands{
-  width: 800px;
-  margin-top: 30px;
-  margin-left: auto;
+  width: 900px;
+  margin-top: 40px;
+  margin-left: 330px;
   margin-right: auto;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
+  display: flex;
+  gap: 50px;
+  
 }
 .brands i{
-  font-size: 40px;
-  justify-content: space-between;
+  font-size: 45px;
   color: var(--shade-colour);
   cursor: pointer;
+  
 }
 
 .brands i:hover{
-  transform: scale(1.8);
-/* }
-.shade-section{
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  padding-top: 50px;
-  background: linear-gradient(var(--shade-colour)2%, var(--primary-color) );
+  transform: scale(1.4);
+  transition: var(--transition-one);
 }
+
 .fa-brands{
   font-size: 25px;
   color: var(--primary-color);
 }
 
 .shade-hr{
-  width: 25px;
+  width: 70px;
   height: 0px;
-  color: white;
- 
-} */
+  background: var(--primary-color);
+}
+.higher-footer{
+ height: 200px;
+ background: linear-gradient( to right, var(--shade-colour), var(--primary-color)99% );
+ padding: 50px 0;
+ align-items: center;
+
+}
+.social-links{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.social-links i:hover{
+  transform: scale(1.5);
+  transition: var(--transition-one);
+}
+.links {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--primary-color);
+  gap: 20px;
+}
+.links a{
+color: var(--primary-color);
+text-decoration: none;
+}
+.links a:hover{
+  text-decoration: underline;
+  }
+  .links nav{
+    display: flex;
+    gap: 10px;
+  }
+  .details{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  }
+.lower-footer {
+  height: 35px;
+  background: var(--black);
+  color: var(--primary-color);
+  background: var(--black);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.f-line{
+  margin-top: -12px;
+  height: 2px;
+  background: var(--black);
+  position: relative;
+  
+}
+.f-line i{
+  color: var(--primary-color);
+  margin-left: auto;
+  margin-right: auto;
+}
+.ico{
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: var(--black);
+  display: grid;
+  place-items: center;
+  margin-left: 50%;
+  margin-right: 50%;
+  position: absolute;
+  top: -17px;
+  
+}
+.lower-footer p{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.details .dot{
+ height: 5px;
+ width: 5px;
+ background-color: #FFFFFF;
+ border-radius: 50%;
+}
 
