--- a/styles.css
+++ b/styles.css
@@ -377,6 +377,7 @@ text-decoration: none;
 }
 .lower-footer p{
   display: flex;
+  font-weight: 700;
   justify-content: center;
   align-items: center;
 }
