--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@
   }
   #login{
   border-top-left-radius: 20px;
-  background: linear-gradient(to right, var(--primary-color) 10%, var(--shade-colour) );
+  background: linear-gradient(to right, var(--primary-color) 10%, #86dfe4);
   }
   #signup{
     border-top-right-radius: 20px;
@@ -102,10 +102,11 @@
    
   }
 #login:hover{
-  color: white;
+  color: var(--black);
+  background: #86dfe4;
 }
 #signup:hover{
-  background: linear-gradient(to right, var(--shade-colour) 10%, var(--primary-color));
+  background: linear-gradient(to right, var(--shade-colour) 10%, #86dfe4);
   color: black;
 }
 .lore{
@@ -125,7 +126,7 @@
     width: 150px;
     height: 35px;
     margin: 20px 0px;
-    background: linear-gradient( to right, var(--shade-colour) 10%, var(--primary-color));
+    background: linear-gradient( to right, var(--shade-colour) 10%, #86dfe4);
     font-weight: 600;
     border: 2px solid white;
     border-radius: 15px;
@@ -187,7 +188,7 @@
  width: 360px;
 }
 .image-bg{
-  background: linear-gradient( var(--shade-colour)2%, var(--primary-color));
+  background: linear-gradient( var(--shade-colour)2%, #86dfe4);
   width: 70px;
   height:70px;
   border-radius: 50%;
@@ -302,7 +303,7 @@ transition: var(--transition-two);
 }
 .higher-footer{
  height: 200px;
- background: linear-gradient( to right, var(--shade-colour), var(--primary-color)99% );
+ background: linear-gradient( to right, var(--shade-colour), #86dfe4 99% );
  padding: 50px 0;
  align-items: center;
 
