--- a/vypy-project/styles.css
+++ b/vypy-project/styles.css
@@ -26,7 +26,7 @@ body{
 .container{
   background-image: linear-gradient(
     rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(images/woman.jpg);
-    height: 80vh;
+    height: 600px;
     background-repeat: no-repeat;
     border-bottom: 5px solid var(--primary-color);
     color: var(--primary-color);
@@ -122,7 +122,7 @@ body{
   width: 21.813rem;
  }
 .hero{
-    margin-top: 10.625rem;
+    margin-top: 6.625rem;
     padding: 1.25rem;
     width: 37.5rem;
     margin-left: 9.375rem;
