--- a/vypy-project/about.css
+++ b/vypy-project/about.css
@@ -223,3 +223,131 @@ color: white;
     align-items: center;
     gap: 15px;
 }
+
+@media (max-width: 768px) {
+    .hero{
+        padding-top: 130px;
+    }
+    .about-hero{
+        margin-top: -12px;
+        height: 60vh;
+        background-color: #0b0b0b;
+    }
+    .about-hero-contents{
+        gap: 25px;
+    }
+    .about-hero-contents img{
+        width: 300px;
+        border-radius: 50px;
+        box-shadow: 0 0 16px black;
+    }
+    .detail{
+        width: auto;
+    }
+    .image-box{
+        margin-top: 100px;
+        width: 100%;
+        height: 50vh;
+    }
+    
+}
+@media (max-width: 1024px){
+    .hero{
+        padding-top: 130px;
+    }
+    .image-box{
+        margin-top: 100px;
+        width: 100%;
+        height: 50vh;
+    }
+} 
+@media (max-width: 1440px){
+    .hero{
+        padding-top: 130px;
+    }
+    .image-box{
+        margin-top: 100px;
+        width: 100%;
+        height: 60vh;
+    }  
+@media (max-width: 425px) {  
+    .about-hero-contents{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        gap: 30px;
+        padding: 10px 15px;
+        justify-content: center;
+        align-items: center;
+        color: white;
+    }
+}
+.skill{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    padding: 0 10px;
+    width: 100%;
+    background-color: #0b0b0b;
+    color: white;
+    justify-content: center;
+    align-items: center;
+}
+.skill-text{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-left: 5px;
+    justify-content: center;
+}
+.imagebox-cover{
+    background-image: linear-gradient(
+      rgba(0, 0, 0, .7), rgba(0, 0, 0, 0.3)), url(https://www.nationaldefensemagazine.org/-/media/sites/magazine/2022/12/smartshooter-smash-2000l-rgb.jpg);
+    height: 460px;
+    background-size: 85%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.imagebox-content{
+    display: grid;
+    place-items: center;
+    font-size: 12px;
+    color: white;
+    gap: 15px;
+    align-items: center;
+    margin-left: 20px;
+    padding: 0px 15px;
+    padding-top: 140px;
+}
+.imagebox-content button{
+    width: 120px;
+    border-radius: 50px;
+    height: 30px;
+    color: black;
+    background-color: #fff;
+    margin-top: 0px;
+}
+.foot{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: 20px;
+    padding: 0px 15px;
+    color: white;
+}
+.foot-content{
+    width: auto;
+}
+.foot-two-details{
+    justify-content: none;
+    margin-top: 10px;
+}
+.two-details{
+    display: flex;
+    gap: 10px;
+}
+}
