--- a/vypy-project/about.css
+++ b/vypy-project/about.css
@@ -261,6 +261,16 @@ color: white;
         height: 50vh;
     }
 } 
+@media (max-width: 1284px){
+    .hero{
+        padding-top: 130px;
+    }
+    .image-box{
+        margin-top: 100px;
+        width: 100%;
+        height: 50vh;
+    }
+}
 @media (max-width: 1440px){
     .hero{
         padding-top: 130px;
@@ -270,6 +280,7 @@ color: white;
         width: 100%;
         height: 60vh;
     }  
+}
 @media (max-width: 425px) {  
     .about-hero-contents{
         display: flex;
@@ -281,7 +292,6 @@ color: white;
         justify-content: center;
         align-items: center;
         color: white;
-    }
 }
 .skill{
     display: flex;
